# quantum-agi-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  publish-dev.yml  publish-prod.yml
examples/: __init__.py  basic_usage.py  qt_demo.py
quantum_agi_sdk/: __init__.py  capture.py  client.py  executor.py  models.py  telemetry.py
quantum_agi_sdk/cloud/: __init__.py  mcp_server.py  server.py
tests/: __init__.py  test_capture.py  test_inference_integration.py  test_state_machine.py
